--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
-spring.application.name=Full-Stack-TP1
+# Configuration de la base de données
+spring.datasource.url=jdbc:mysql://localhost:3306/fs_tp1_category_db?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+
+# Driver de la base de données
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuration de Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Configuration JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+
+# Afficher les requêtes SQL générées (optionnel)
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
