--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Configuration de la base de données
-spring.datasource.url=jdbc:mysql://localhost:3306/fs_tp1_category_db?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/fs_tp1_category_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -15,3 +15,4 @@ spring.jpa.hibernate.ddl-auto=update
 # Afficher les requêtes SQL générées (optionnel)
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
